Add endpoints for order and protein, insert migrations, new exceptions and DTOs
